random tweaks and fix